--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,7 +19,7 @@ const { noMarginTop = false } = Astro.props;
       <span>Copyright &#169; {currentYear} Alan Ye</span>
       <span class="separator">&nbsp;|&nbsp;</span>
       <span>Available under
-        <a class="underline decoration-dashed underline-offset-4 group inline-block hover:text-skin-accent" href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>
+        <a class="underline decoration-dashed underline-offset-4 group inline-block hover:text-skin-accent" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a>
       </span>
     </div>
   </div>
