--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import LinkButton from "@components/LinkButton.astro";
 import Hr from "@components/Hr.astro";
 import Card from "@components/Card";
 import Socials from "@components/Socials.astro";
+import SearchBar from "@components/Search";
 import getSortedPosts from "@utils/getSortedPosts";
 import { SOCIALS } from "@config";
 
@@ -58,7 +59,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         )
       }
     </section>
-
+    <SearchBar client:load searchList={searchList} />
     <Hr />
 
     {
