fix: searchList on index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,14 @@ const featuredPosts = sortedPosts.filter(({ data }) => data.featured);
 const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
 
 const socialCount = SOCIALS.filter(social => social.active).length;
+
+// List of items to search in (from search.astro)
+const searchList = sortedPosts.map(({ data, slug }) => ({
+  title: data.title,
+  description: data.description,
+  data,
+  slug,
+}));
 ---
 
 <Layout>
