Modify: Set margin-top for SearchBar and remove <Hr />

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,8 +66,9 @@ const searchList = sortedPosts.map(({ data, slug }) => ({
           </div>
         )
       }
-      <Hr />
+      <div style="margin-top: 0.5rem;">
       <SearchBar client:load searchList={searchList} />
+      </div>
     </section>
     <Hr />
 
