--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -12,13 +12,13 @@ import LinkButton from "@components/LinkButton.astro";
   <main id="main-content">
     <div class="not-found-wrapper">
       <h1 aria-label="404 Not Found">404</h1>
-      <span aria-hidden="true">¯\_(ツ)_/¯</span>
+      <span aria-hidden="true"></span>
       <p>Page Not Found</p>
       <LinkButton
         href="/"
         className="my-6 underline decoration-dashed underline-offset-8 text-lg"
       >
-        Go back home
+        Back to home
       </LinkButton>
     </div>
   </main>
@@ -26,6 +26,17 @@ import LinkButton from "@components/LinkButton.astro";
   <Footer />
 </Layout>
 
+<script>
+  // output a random list of 404 messages
+const fourOhFourMessages = [
+    "AHHHHHHHH! I cannot find the page anywhere QAQ",
+    "Huh? Where did the page go?",
+    "I think I lost the page...",
+    "WHAT?! THE PAGE WAS GONE!"
+    ]
+const randomMessage = fourOhFourMessages[Math.floor(Math.random() * fourOhFourMessages.length)];
+document.querySelector("span[aria-hidden='true']").innerHTML = randomMessage;
+</script>
 <style>
   #main-content {
     @apply mx-auto flex max-w-3xl flex-1 items-center justify-center;
