--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,7 +41,8 @@ const socialImageURL = new URL(
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/avatar.png" />
+    <link rel="icon" type="image/svg+xml" href="/assets/avatar_180x180.webp" />
+    <link rel="apple-touch-icon" href="/assets/avatar.png">
     <link rel="canonical" href={canonicalURL} />
     <meta name="generator" content={Astro.generator} />
 
