Add: Language support in Posts

--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -23,6 +23,7 @@ const {
   pubDatetime,
   modDatetime,
   tags,
+  language,
 } = post.data;
 
 const { Content } = await post.render();
@@ -59,7 +60,7 @@ const layoutProps = {
       </svg><span>Go back</span>
     </button>
   </div>
-  <main id="main-content">
+  <main id="main-content" lang={language}>
     <h1 transition:name={slugifyStr(title)} class="post-title">{title}</h1>
     <Datetime
       pubDatetime={pubDatetime}
