--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -7,6 +7,7 @@ import Datetime from "@components/Datetime";
 import type { CollectionEntry } from "astro:content";
 import { slugifyStr } from "@utils/slugify";
 import ShareLinks from "@components/ShareLinks.astro";
+import Comments from "@components/Comments.astro";
 
 export interface Props {
   post: CollectionEntry<"blog">;
@@ -94,6 +95,7 @@ const layoutProps = {
 
       <ShareLinks />
     </div>
+    <Comments />
   </main>
   <Footer />
 </Layout>
