--- a/src/layouts/FriendsLayout.astro
+++ b/src/layouts/FriendsLayout.astro
@@ -16,7 +16,7 @@ const { frontmatter } = Astro.props;
 ---
 
 <Layout title={`${frontmatter.title} | ${SITE.title}`}>
-  <Header activeNav="links" />
+  <Header activeNav="friends" />
   <Breadcrumbs />
   <main id="main-content">
     <section id="links" class="prose mb-28 max-w-3xl prose-img:border-0">
