Edit: Re-arranged the <a> code

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,10 +19,9 @@ const { noMarginTop = false } = Astro.props;
       <span>&#169; {currentYear}</span>
       <span class="separator">&nbsp;|&nbsp;</span>
       <span>Available under
-        <a class="underline decoration-dashed underline-offset-4 group inline-block hover:text-skin-accent" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a>
+        <a class="underline decoration-dashed underline-offset-4 group inline-block hover:text-skin-accent"
+           href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a>
       </span>
-      <span class="separator">&nbsp;|&nbsp;</span>
-      <span><a class="underline decoration-dashed underline-offset-4 group inline-block hover:text-skin-accent" href="https://www.travellings.cn/go.html" target="_blank">Travelling</a></span>
     </div>
   </div>
 </footer>
