Edit: Add title & aria-lable in <button>

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -76,24 +76,26 @@ const { activeNav } = Astro.props;
             </a>
           </li>
           <li>
-            <a href="https://www.travellings.cn/go.html" target="_blank">
-              <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="icon icon-tabler icon-tabler-train"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"><path
-                  stroke="none"
-                  d="M0 0h24v24H0z"
-                  fill="none"/><path
-                  d="M21 13c0 -3.87 -3.37 -7 -10 -7h-8" /><path
-                  d="M3 15h16a2 2 0 0 0 2 -2" /><path
-                  d="M3 6v5h17.5" /><path
-                  d="M3 10l0 4" /><path
-                  d="M8 11l0 -5" /><path
-                  d="M13 11l0 -4.5" /><path
-                  d="M3 19l18 0" /></svg>
-                <span class="sr-only">Travelling</span>
-            </a>
+            <button id="travelling-btn" title="Travelling (Random Chinese Blog)" aria-label="travelling">
+              <a href="https://www.travellings.cn/go.html" target="_blank">
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="icon icon-tabler icon-tabler-train"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"><path
+                    stroke="none"
+                    d="M0 0h24v24H0z"
+                    fill="none"/><path
+                    d="M21 13c0 -3.87 -3.37 -7 -10 -7h-8" /><path
+                    d="M3 15h16a2 2 0 0 0 2 -2" /><path
+                    d="M3 6v5h17.5" /><path
+                    d="M3 10l0 4" /><path
+                    d="M8 11l0 -5" /><path
+                    d="M13 11l0 -4.5" /><path
+                    d="M3 19l18 0" /></svg>
+                  <span class="sr-only">Travelling</span>
+              </a>
+            </button>
           </li>
           <li>
             <LinkButton
