--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -76,7 +76,7 @@ const { activeNav } = Astro.props;
             </a>
           </li>
           <li>
-            <button id="travelling-btn" title="Travelling (Random Chinese Blog)" aria-label="travelling">
+            <button id="travelling-btn" title="Travelling (Random Chinese Blog)" aria-label="travelling" class="group inline-block hover:text-skin-accent focus-outline p-3 sm:p-1">
               <a href="https://www.travellings.cn/go.html" target="_blank">
                 <svg
                     xmlns="http://www.w3.org/2000/svg"
