Edit: Add "student" in the subtitle section of the index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,7 +51,7 @@ const searchList = sortedPosts.map(({ data, slug }) => ({
       </a>
 
       <p>
-        A Tech guy, Wiki editor, and Web developer.
+        A Tech guy, Wiki editor, Web developer, and a student.
       </p>
       <p>
         This is my personal blog where I write about Web dev, Linux, and other tech or casual stuff.
