Modify: CC BY-SA 4.0 New Style

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,8 +19,16 @@ const { noMarginTop = false } = Astro.props;
       <span>&#169; {currentYear}</span>
       <span class="separator">&nbsp;|&nbsp;</span>
       <span>Available under
-        <a class="underline decoration-dashed underline-offset-4 group inline-block hover:text-skin-accent"
-           href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a>
+        <button id="cc-by-sa-btn" title="CC BY-SA 4.0" aria-label="cc-by-sa 4.0" class="group inline-block hover:text-skin-accent focus-outline p-3 sm:p-1">
+          <a class="underline decoration-dashed underline-offset-4 group inline-block hover:text-skin-accent"
+             href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon-tabler" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" /><path d="M10.5 10.5c-.847 -.71 -2.132 -.658 -2.914 .116a1.928 1.928 0 0 0 0 2.768c.782 .774 2.067 .825 2.914 .116" /><path d="M16.5 10.5c-.847 -.71 -2.132 -.658 -2.914 .116a1.928 1.928 0 0 0 0 2.768c.782 .774 2.067 .825 2.914 .116" /></svg>
+            &nbsp;
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon-tabler" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" /><path d="M12 7m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" /><path d="M9 13v-1a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v1a1 1 0 0 1 -1 1h-.5l-.5 4h-2l-.5 -4h-.5a1 1 0 0 1 -1 -1z" /></svg>
+            &nbsp;
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon-tabler" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" /><path d="M12 16a4 4 0 1 0 -4 -4v1" /><path d="M6 12l2 2l2 -2" /></svg>
+          </a>
+        </button>
       </span>
     </div>
   </div>
