--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -80,7 +80,7 @@ const { activeNav } = Astro.props;
               <a href="https://www.travellings.cn/go.html" target="_blank">
                 <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    class="icon icon-tabler icon-tabler-train"
+                    class="icon-tabler"
                     stroke-linecap="round"
                     stroke-linejoin="round"><path
                     stroke="none"
