Add: Mastodon Social Link

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,8 +43,9 @@ const socialImageURL = new URL(
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/assets/avatar_180x180.webp" />
-    <link rel="apple-touch-icon" href="/assets/avatar.png">
+    <link rel="apple-touch-icon" href="/assets/avatar.png" />
     <link rel="canonical" href={canonicalURL} />
+    <link rel="me" href="https://mastodon.social/@wrye" />
     <meta name="generator" content={Astro.generator} />
 
     <!-- General Meta Tags -->
