--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -1,7 +1,7 @@
 <section class="giscus mx-auto mt-10 w-full"></section>
 
 <script src="https://giscus.app/client.js"
-        data-repo="AlanYe-Dev/blog"
+        data-repo="at-wr/blog"
         data-repo-id="R_kgDOLGgwKA"
         data-category="Blog Posts Comments"
         data-category-id="DIC_kwDOLGgwKM4Ccj9B"
