--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,6 +45,7 @@ const socialImageURL = new URL(
     <link rel="icon" type="image/svg+xml" href="/assets/avatar_180x180.webp" />
     <link rel="apple-touch-icon" href="/assets/avatar.png" />
     <link rel="canonical" href={canonicalURL} />
+    <link rel="me" href="https://fedist.me/@wr" />
     <link rel="me" href="https://mastodon.social/@wrye" />
     <meta name="generator" content={Astro.generator} />
 
