feat: open travellings in current tab fix: add nofollow tag

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -77,7 +77,7 @@ const { activeNav } = Astro.props;
           </li>
           <li>
             <button id="travelling-btn" title="Travelling (Random Chinese Blog)" aria-label="travelling" class="group inline-block hover:text-skin-accent focus-outline p-3 sm:p-1">
-              <a href="https://www.travellings.cn/go.html" target="_blank">
+              <a href="https://www.travellings.cn/go.html" rel="nofollow">
                 <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="icon-tabler"
