feat: add console log for contact

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -112,6 +112,7 @@ const socialImageURL = new URL(
     <ViewTransitions />
 
     <script is:inline src="/toggle-theme.js"></script>
+    <script>console.log("Wanna learn something more about me, or just feeling bored and wanted to get in touch with me?\nFeel free to contact me on Telegram and have no fear!\nhttps://t.me/WrOffi")</script>
   </head>
   <body>
     <slot />
